--- a/Home.html
+++ b/Home.html
@@ -1,79 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>CSS Template</title>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
+<body>
+  <div class="wrapper">
 
-/* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
-  padding: 20px;
-}
+<head>
+<title>CSS Template</title>
 
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 800px) {
-  nav, article {
-    width: 100%;
-    height: auto;
-  }
-}
-</style>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
 
 <header>
-  <h2>Spider Gecko</h2>
+  <h2>Home</h2>
 </header>
 
 <section>
@@ -88,10 +32,8 @@ footer {
     </div>
     </ul>
   </nav>
-  
-  
   <article>
-    <h1>Spider Gecko</h1>
+    <h1>Home</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -118,11 +60,14 @@ footer {
       </p>
   </article>
 </section>
-      
-
 <footer>
-  <a href="Home.html">Home</a>
-</footer>
+  </footer>
+
+
+    <div class="push"></div>
+  </div>
+  <footer class="footer"></footer>
+</body>
 
 </body>
 </html>
