--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ footer {
 
 
 <header>
-  <h2>Home</h2>
+  <h2>Senjei</h2>
 </header>
 
 <section>
@@ -90,9 +90,8 @@ footer {
   </nav>
   
   
-  
   <article>
-    <h1>Home</h1>
+    <h1>Senjei</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -122,13 +121,8 @@ footer {
       
 
 <footer>
-  </footer>
-
-
-    <div class="push"></div>
-  </div>
-  <footer class="footer"></footer>
-</body>
+  <a href="index.html">Home</a>
+</footer>
 
 </body>
 </html>
