--- a/Senjei.html
+++ b/Senjei.html
@@ -73,7 +73,7 @@ footer {
 
 
 <header>
-  <h2>Senjei</h2>
+  <h2>Dogo</h2>
 </header>
 
 <section>
@@ -90,7 +90,7 @@ footer {
   </nav>
   
   <article>
-    <h1>My Fish Tank</h1>
+    <h1>My Dogo</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
