--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ footer {
 
 
 <header>
-  <h2>Senjei</h2>
+  <h2>Home</h2>
 </header>
 
 <section>
@@ -91,7 +91,7 @@ footer {
   
   
   <article>
-    <h1>Senjei</h1>
+    <h1>Home</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
