--- a/index.html
+++ b/index.html
@@ -1,73 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>CSS Template</title>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
+<body>
+  <div class="wrapper">
 
-/* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
-  padding: 20px;
-}
+<head>
+<title>CSS Template</title>
 
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-  nav, article {
-    width: 100%;
-    height: auto;
-  }
-}
-</style>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
@@ -76,21 +20,23 @@ footer {
   <h2>Home</h2>
 </header>
 
+<br>
 <section>
   <nav>
     <ul>
    <h1 style="text-align:center;">My Companions</h1>
     <div align="center">
-      <a href="Dogo.html"><img src="Dogo.jpg" height="100" width="100"></a>
+      <a href="Senjei.html"><img src="Senjei.jpg" height="100" width="100"></a>
       <a href="Spider Gecko.html"><img src="Jango the Spider Gecko.jpg" height="100" width="100"></a>
-      <a href="new page 4.html"><img src="Fish Tank.gif" height="100" width="100"></a><br>
+      <a href="My Fish Tank.html"><img src="Fish Tank.gif" height="100" width="100"></a><br>
     Click US
     </div>
     </ul>
   </nav>
-  
-  
-  <article>
+ 
+
+
+ <article>
     <h1>Home</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -118,11 +64,65 @@ footer {
       </p>
   </article>
 </section>
-      
+</div>
+<br>
+
+<section>
+  <nav>
+    <ul>
+   <h1 style="text-align:center;">My Companions</h1>
+    <div align="center">
+      <a href="Senjei.html"><img src="Senjei.jpg" height="100" width="100"></a>
+      <a href="Spider Gecko.html"><img src="Jango the Spider Gecko.jpg" height="100" width="100"></a>
+      <a href="My Fish Tank.html"><img src="Fish Tank.gif" height="100" width="100"></a><br>
+    Click US
+    </div>
+    </ul>
+  </nav>
+ 
+
+
+ <article>
+    <h1>Home</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p> 
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+  </article>
+</section>
+
+<br>
 
 <footer>
-  <a href="index.html">Home</a>
-</footer>
+  </footer>
+
+
+    <div class="push"></div>
+  </div>
+  <footer class="footer"></footer>
+</body>
+
+
 
 </body>
 </html>
