--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <ul>
    <h1 style="text-align:center;">My Companions</h1>
     <div align="center">
-      <a href="Senjei.html"><img src="Senjei.jpg" height="100" width="100"></a>
+      <a href="Dogo.html"><img src="Dogo.jpg" height="100" width="100"></a>
       <a href="Spider Gecko.html"><img src="Jango the Spider Gecko.jpg" height="100" width="100"></a>
       <a href="My Fish Tank.html"><img src="Fish Tank.gif" height="100" width="100"></a><br>
     Click US
@@ -72,7 +72,7 @@
     <ul>
    <h1 style="text-align:center;">My Companions</h1>
     <div align="center">
-      <a href="Senjei.html"><img src="Senjei.jpg" height="100" width="100"></a>
+      <a href="Dogo.html"><img src="Dogo.jpg" height="100" width="100"></a>
       <a href="Spider Gecko.html"><img src="Jango the Spider Gecko.jpg" height="100" width="100"></a>
       <a href="My Fish Tank.html"><img src="Fish Tank.gif" height="100" width="100"></a><br>
     Click US
